[package]
name = "html-node"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[workspace]
default-members = [".", "./macro"]
members = ["./macro"]

    [workspace.package]
    authors = ["Vidhan Bhatt <me@vidhan.io>", "vldm <me@vldm.cc>"]
    categories = ["template-engine"]
    description = "A html to node macro powered by rstml."
    edition = "2021"
    homepage = "https://github.com/vidhanio/html-node"
    keywords = ["html", "macro", "rstml"]
    license = "MIT"
    readme = "README.md"
    repository = "https://github.com/vidhanio/html-nodes"
    version = "0.1.0"


[dependencies]
html-escape = "0.2"
html-node-macro = { version = "0.1", path = "./macro" }
