[package]
name = "html-node-core"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

    [package.metadata.docs.rs]
    all-features = true

[dependencies]
axum = { version = "0.6", optional = true, default-features = false }

html-escape = "0.2"

[features]
axum = ["dep:axum"]
typed = []
