[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "html-node-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

    [package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum = { version = "0.6", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

html-escape = "0.2"
paste = "1.0.14"

[features]
axum = ["dep:axum"]
pretty = []
serde = ["dep:serde"]
typed = []

[lints]
workspace = true
