[package]
name = "html-node"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
documentation = "https://docs.rs/html-node"

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "typed"
required-features = ["typed"]

[dependencies]
html-node-core = { version = "0.1", path = "../html-node-core" }
html-node-macro = { version = "0.1", path = "../html-node-macro" }


[dev-dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
axum = ["html-node-core/axum"]
typed = ["html-node-core/typed", "html-node-macro/typed"]
