[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/html-node"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "html-node"
readme.workspace = true
repository.workspace = true
version.workspace = true

    [package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "docsrs"]


[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "typed_custom_attributes"
required-features = ["typed"]

[dependencies]
html-node-core = { version = "0.5", path = "../html-node-core" }
html-node-macro = { version = "0.5", path = "../html-node-macro" }


[dev-dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
axum = ["html-node-core/axum"]
pretty = ["html-node-core/pretty"]
serde = ["html-node-core/serde"]
typed = ["html-node-core/typed", "html-node-macro/typed"]


[lints]
workspace = true
